# codingTest/routes/api.php
@@ -18,4 +18,6 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::apiResource('/posts', App\Http\Controllers\CalonController::class);
+Route::apiResource('posts', App\Http\Controllers\CalonController::class);
+Route::apiResource('candidate', App\Http\Controllers\CalonController::class);
+
